.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Permissions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Define tabs and views for each profile and permission sets</description>
    <fields>
        <fullName>xcdhcm__Admin_Permissions__c</fullName>
        <label>Admin: Permissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Admin_Profiles__c</fullName>
        <label>Admin: Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_View_Permission_Sets__c</fullName>
        <label>My Team: Permissions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Managerview_profile__c</fullName>
        <label>My Team: Profiles</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Permission_Set_Name__c</fullName>
        <label>My HR/My Details: Permissions</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Profile__c</fullName>
        <label>My HR/My Details: Profiles</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Permissions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>xx,deprecated</value>
        </filters>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Buttons_and_Links</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>button,link</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>button,link</value>
        </filters>
        <label>Buttons and Links</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Company</fullName>
        <booleanFilter>(1 or 2) and 3 and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Company</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>Company</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>deprecated,deprecate,not used</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>not used</value>
        </filters>
        <label>Company</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Document</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>document</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>document</value>
        </filters>
        <label>Document</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Employee</fullName>
        <booleanFilter>(1 or 3) and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>employee</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>deprecate,deprecated,not used</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>employee</value>
        </filters>
        <label>Employee</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Find</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Profile__c</field>
            <operation>contains</operation>
            <value>manager</value>
        </filters>
        <label>Find</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Learning</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Course</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>Course</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>xx,deprecated,no longer in use</value>
        </filters>
        <label>Learning</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Manager</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Manager</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>Manager</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>deprecated,deprecate,not used</value>
        </filters>
        <label>Manager</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Payroll</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>payroll</value>
        </filters>
        <label>Payroll</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Performance</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>perf</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>perf</value>
        </filters>
        <label>Performance</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Team_Chart</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>team chart</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>team chart</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>not used</value>
        </filters>
        <label>Team Chart</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__All_view</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>xcdhcm__Admin_Permissions__c</columns>
        <columns>xcdhcm__Admin_Profiles__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>xx,deprecated</value>
        </filters>
        <label>All view</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__Employee_Buttons</fullName>
        <booleanFilter>(1 or 2) AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Admin_Profiles__c</columns>
        <columns>xcdhcm__Admin_Permissions__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>button</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>button</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>xx,deprecated,no longer in use</value>
        </filters>
        <filters>
            <field>xcdhcm__Profile__c</field>
            <operation>contains</operation>
            <value>Employee</value>
        </filters>
        <label>Employee Buttons</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__Equity</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Admin_Profiles__c</columns>
        <columns>xcdhcm__Admin_Permissions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>Equity</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>xx,deprecated</value>
        </filters>
        <label>Equity</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__Expenses</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Profile__c</columns>
        <columns>xcdhcm__Permission_Set_Name__c</columns>
        <columns>xcdhcm__Managerview_profile__c</columns>
        <columns>xcdhcm__Manager_View_Permission_Sets__c</columns>
        <columns>xcdhcm__Admin_Profiles__c</columns>
        <columns>xcdhcm__Admin_Permissions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>contains</operation>
            <value>Expense</value>
        </filters>
        <filters>
            <field>xcdhcm__Description__c</field>
            <operation>notContain</operation>
            <value>xx,deprecated</value>
        </filters>
        <label>Expenses</label>
        <language>en_GB</language>
    </listViews>
</CustomObject>